5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1723_2505.log
== TEST (2019-05-09 11:47:03) 
-- CODE:
from math import*

x = eval(input("Valor: "))
k = int(input("Termos: "))
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1)
	c = c + 1
	i = i + 1
	z = z + 1

print(y)	
-- OUTPUT:
2.6353381695161057e-05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:47:25) 
-- CODE:
from math import*

x = eval(input("Valor: "))
k = int(input("Termos: "))
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1)
	c = c + 1
	i = i + 1
	z = z + 1

print(round(y, 10))	
-- OUTPUT:
2.63534e-05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:47:57) 
-- CODE:
from math import*

x = eval(input("Valor: "))
k = int(input("Termos: "))
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1)
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- OUTPUT:
0.0001604412
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:48:04) 
-- CODE:
from math import*

x = eval(input("Valor: "))
k = int(input("Termos: "))
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1)
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- OUTPUT:
0.0001604412
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:49:22) 
-- CODE:
from math import*

x = eval(input("Valor: "))
k = int(input("Termos: "))
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) + y
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    y = (-1)**i * (x**z)/factorial(2*i + 1) + y
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:49:39) 
-- CODE:
from math import*

x = eval(input("Valor: "))
k = int(input("Termos: "))
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) 
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- OUTPUT:
0.0001604412
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:01:39) 
-- CODE:
from math import*

x1 = eval(input("Valor: "))
k = int(input("Termos: "))
x = radians(x1)
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) 
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:01:56) 
-- CODE:
from math import*

x1 = eval(input("Valor: "))
k = int(input("Termos: "))
x = radians(x1)
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) 
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:01:56) 
-- CODE:
from math import*

x1 = eval(input("Valor: "))
k = int(input("Termos: "))
x = radians(x1)
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) 
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- EXECUTION TIME:
0.107187
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
0.0
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
0.0
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:02:04) 
-- CODE:
from math import*

x1 = eval(input("Valor: "))
k = int(input("Termos: "))
x = radians(x1)
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) 
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:02:04) 
-- CODE:
from math import*

x1 = eval(input("Valor: "))
k = int(input("Termos: "))
x = radians(x1)
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) 
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:03:38) 
-- CODE:
from math import*

x = radians(eval(input("Valor: ")))
k = int(input("Termos: "))
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) 
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:03:46) 
-- CODE:
from math import*

x = radians(eval(input("Valor: ")))
k = int(input("Termos: "))
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) 
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:04:04) 
-- CODE:
from math import*

x = eval(input("Valor: "))
k = int(input("Termos: "))
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) 
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- OUTPUT:
0.0001604412
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:04:33) 
-- CODE:
from math import*

x = eval(input("Valor: "))
k = int(input("Termos: "))
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) 
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- OUTPUT:
0.0001604412
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:06:10) 
-- CODE:
from math import*

x = eval(input("Valor: "))
k = int(input("Termos: "))
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) 
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- OUTPUT:
0.0001604412
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:06:12) 
-- CODE:
from math import*

x = eval(input("Valor: "))
k = int(input("Termos: "))
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) 
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- EXECUTION TIME:
0.190598
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
0.0001604412
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
0.0046817541
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.0104945022
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:06:59) 
-- CODE:
from math import*

x = eval(input("Valor: "))
k = int(input("Termos: "))
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) + y
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    y = (-1)**i * (x**z)/factorial(2*i + 1) + y
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:07:06) 
-- CODE:
from math import*

x = eval(input("Valor: "))
k = int(input("Termos: "))
c = 0
i = 0
z = 1

while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) + y
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    y = (-1)**i * (x**z)/factorial(2*i + 1) + y
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:07:26) 
-- CODE:
from math import*

x = eval(input("Valor: "))
k = int(input("Termos: "))
c = 0
i = 0
z = 1
y = 0
while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) + y
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:07:31) 
-- CODE:
from math import*

x = eval(input("Valor: "))
k = int(input("Termos: "))
c = 0
i = 0
z = 1
y = 0
while (c <= k - 1):
	y = (-1)**i * (x**z)/factorial(2*i + 1) + y
	c = c + 1
	i = i + 1
	z = z + 2

print(round(y, 10))	
-- EXECUTION TIME:
0.146955
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
